--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,16 @@
 [package]
-name = "libc"
+name = "libc-nnsdk"
 version = "0.0.1"
 authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
 edition = "2018"
+license = "MIT"
+repository = "https://github.com/ultimate-research/libc-nnsdk"
+description = "Rust bindings for the parts of libc exposed by nnsdk, intended to be a in-place replacement for standard Rust libc bindings"
+documentation = "https://docs.rs/libc-nnsdk"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "libc"
+path = "src/lib.rs"
 
 [dependencies]
 rustc-std-workspace-core = { version = "1", optional = true }
