--- a/libc-nnsdk/Cargo.toml
+++ b/libc-nnsdk/Cargo.toml
@@ -13,7 +13,7 @@ name = "libc"
 path = "src/lib.rs"
 
 [dependencies]
-rustc-std-workspace-core = { version = "1", optional = true }
+core = { version = "1.0", package = "rustc-std-workspace-core", optional = true }
 
 [features]
-rustc-dep-of-std = ["rustc-std-workspace-core"]
+rustc-dep-of-std = ["core"]
